# pyakuvox

./: .env.example  .gitignore  CHANGELOG.md  Pipfile  README.md  pyproject.toml
.github/workflows/: ci.yml
akuvox_api/: __init__.py  capabilities.py  config.py  discovery.py  exceptions.py
akuvox_api/clients/: base.py
akuvox_api/clients/local/: __init__.py  auth.py  client.py  encoding.py  parsers.py  webui.py
akuvox_api/models/: __init__.py  device.py  events.py  firmware.py  schedules.py  session.py
docs/: FIELD_LEARNINGS.md
pyakuvox/: __init__.py  config.py  device.py  discovery.py  exceptions.py  identify.py  logging_config.py  network.py
pyakuvox/cli/: discover_cmd.py  local_cmd.py  main.py  output.py  raw_cmd.py  webui_cmd.py
pyakuvox/clients/: base.py
pyakuvox/clients/local/: __init__.py  auth.py  client.py  encoding.py  flip.py  parsers.py  webapi.py  webui.py
pyakuvox/models/: __init__.py  users.py
tests/: test_cli.py  test_device.py  test_identify.py  test_local_client.py  test_network.py  test_webapi_flip.py
