[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyakuvox"
version = "0.1.0"
description = "Proof-of-concept Python library for Akuvox intercom integration (local + cloud research)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Danniel Perez" },
]
keywords = ["akuvox", "intercom", "access-control", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "typer[all]>=0.12",
]

[project.urls]
Homepage = "https://github.com/dannielperez/pyakuvox"
Repository = "https://github.com/dannielperez/pyakuvox"
Documentation = "https://github.com/dannielperez/pyakuvox#readme"
Issues = "https://github.com/dannielperez/pyakuvox/issues"
Changelog = "https://github.com/dannielperez/pyakuvox/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "coverage>=7.4",
    "pre-commit>=3.7",
]

[project.scripts]
akuvox = "pyakuvox.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["pyakuvox"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring a real device (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
